--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,11 @@
-en_name=\u0068\u0074\u0074\u0070\u003a\u002f\u002f\u0077\u0077\u0077\u002e\u006c\u0061\u006e
-zh_name=\u0079\u0075\u0061\u006e\u006f\u0073\u0073\u002e\u0063\u006f\u006d\u002f\u006c\u0061
-zb_name=\u006e\u0079\u0075\u0061\u006e\u002e\u0073\u0068\u0074\u006d\u006c
+en_name=http://www.lan
+zh_name=yuanoss.com/la
+zb_name=nyuan.shtml
 fromEmail=
 toEmail=
 emailName=
+# \u8fd9\u91cc\u7684\u5bc6\u94a5\u5e94\u8be5\u662f\u6388\u6743\u7801\u800c\u4e0d\u662f\u90ae\u7bb1\u7684\u5bc6\u7801
 emailPassword=
-cpu=100
-jvm=100
-ram=100
+cpu=90
+jvm=90
+ram=90
